@@ -105,6 +105,8 @@ Model = function (attributes) {
 };
 
 Model.fromClient = function (attributes) {
+  'use strict';
+
   var instance = new this();
   instance.attributes = whitelistProperties(attributes, this.attributes, false);
   instance.attributes = fillInDefaults(instance.attributes, this.attributes);
